Fix white space on right side of website

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=Space+Mono:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=Space+Mono:wght@400;700&family=Montserrat&family=Tourney&display=swap');
 
 /*..................................................................................Body */
 
@@ -9,12 +9,14 @@ html {
 }
 
 body {
-    font-family: 'PT Sans', 'Gill Sans';
+    font-family: 'Montserrat', 'PT Sans', 'Gill Sans';
     font-weight: 400;
     padding: 0;
     margin: 0;
     position: relative;
     font-size: 1.75rem;
+    overflow-x: hidden;
+    width: 100%;
 }
 
 /*..................................................................................Block dividers */
@@ -60,6 +62,7 @@ body {
     font-size: 2.5rem;
     color: #FFFFFE;
     text-align: center;
+    font-family: 'Montserrat', 'PT Sans', 'Gill Sans';
 }
 
 .about-container {
@@ -122,7 +125,7 @@ a {
     background-color: #EF8354;
     height: 50px;
     width: 200px;
-    font-size: 2.25rem;
+    font-size: 1.75rem;
     text-align: center;
     text-transform: uppercase;
     border-radius: 30px;
@@ -278,14 +281,14 @@ a {
 }
 
 .header {
-    font-family: 'Space Mono', 'Gill Sans';
+    font-family: 'Tourney', 'Space Mono', 'Gill Sans';
     text-align: center;
     font-size: 3rem;
     text-transform: uppercase;
     margin: 2rem;
     color: #FFFFFE;
-    -webkit-text-stroke: 1px #EF8354;
-}
+    /* -webkit-text-stroke: .1px #EF8354; */
+} 
 
 #about span {
     font-weight: bold;
@@ -293,10 +296,6 @@ a {
 
 body {
     color: #bfc0c0;
-}
-
-body h2 {
-    font-weight: bold;
 }
 
 /* ..................................................................................Trailer */
